# proofsearch

./: .gitignore  .gitmodules  README.md  compute_metrics.py  pyproject.toml  runsearch.py  viz.py  vizsearch.py
output/_minif2f_test/13-02-2024-23-52/: results__EleutherAI_llemma_7b__0.json
output/gpt4_minif2f_test/14-02-2024-21-03/: results__gpt4-1106-preview__0.json
output/gpt4_minif2f_test/14-02-2024-22-14/: results__gpt4-1106-preview__0.json
output/gpt4_minif2f_valid/15-02-2024-01-49/: results__gpt4-1106-preview__0.json
output/gpt4_minif2f_valid/15-02-2024-11-44/: results__gpt4-1106-preview__0.json
output/llemma7b_minif2f_test/01-02-2024-23-40/: results__open-web-math_llemma_7b__0.json
output/llemma7b_minif2f_test/02-02-2024-11-35/: results__open-web-math_llemma_7b__0.json
output/llemma7b_minif2f_test/03-02-2024-15-58/: results__open-web-math_llemma_7b__0.json
output/llemma7b_minif2f_test/07-02-2024-11-27/: results__open-web-math_llemma_7b__0.json
output/llemma7b_minif2f_test/07-02-2024-17-34/: results__open-web-math_llemma_7b__0.json
output/llemma7b_minif2f_valid/04-02-2024-18-37/: results__open-web-math_llemma_7b__0.json
output/llemma7b_minif2f_valid/05-02-2024-02-15/: results__open-web-math_llemma_7b__0.json
output/llemma7b_minif2f_valid/13-02-2024-14-51/: results__EleutherAI_llemma_7b__0.json
output/llemma7b_minif2f_valid/13-02-2024-15-17/: results__EleutherAI_llemma_7b__0.json
output/llemma7b_minif2f_valid/13-02-2024-15-28/: results__EleutherAI_llemma_7b__0.json
output/llemma7b_minif2f_valid/13-02-2024-23-49/: results__EleutherAI_llemma_7b__0.json
proofsearch/: prompt.py
scripts/: eval_llemma7b.sh  launch_slurm.sub
