[tool.poetry]
name = "proofsearch"
version = "0.0.0"
description = "Experiments on proof tree search."
authors = ["Justin Chiu <chiu.justin.t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.11,>=3.9"
numpy = "*"
scipy = "*"
rich = "*"

lean-dojo = "*"

# openai
tiktoken = "*"
openai = "*"
tenacity = "*"

# plotting
seaborn = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
