[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "datasets",
    "numpy",
    "openai",
    "tiktoken",
    "tenacity>=8.2.3",
    "transformers",
    "torch",
    "lean-dojo",
    "vllm",
]
requires-python = ">=3.9,<3.11"
name = "proofsearch"
version = "0.0.1"
description = ""
authors = [
    {name = "justin chiu", email = "chiu.justin.t@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "python-dotenv>=1.0.0",
    "mypy>=1.5.1",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "types-PyYAML>=6.0.12.11",
]
